--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </h3>
             
                             <p class="home__info-description">
-                                Hi, I'm Akshat, Data Scientist &
+                                Hello, I'm Akshat, Data Scientist &
                                 Certified Ethical Hacker. Passionate
                                 about good analysing. Based in IOS
                             </p>
