--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="home__container container grid section__border">
                     <div class="home__data grid">
                         <h1 class="home__title">
-                            Hi, I'm Akshat <br>
+                            Hello, I'm Akshat <br>
                             Data Scientist <br>
                             Based In IOS <br>
                         </h1>
